<resources>
    <string name="app_name">Amimounstruos</string>
    <string name="login">login</string>
    <string name="hint_name">Nombre</string>
  <string name="hint_friend">Nombre o usuario</string>
    <string name="textlogin1">¿Cuál es tu nombre amimonstruoso?</string>
    <string name="textlogin2">Para comenzar, ingresa tu nombre</string>
    <string name="slc1">Elige un amimonstruo para ti</string>
    <string name="slc2">Este avatar lo podrás cambiar luego</string>
    <string name="cursos">Cursos</string>
    <string name="amigos">Amigos</string>
    <string name="logros">Logros</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="novedades">Novedades</string>
    <string name="not1">Recordatorios diarios de practicas y de rachas</string>
    <string name="not2">Actualizaciones sobre nuevas funcionalidades, promociones y eventos</string>
    <string name="centroayuda">Centro de Ayuda</string>
    <string name="preguntasfrec">Preguntas frecuentes</string>
    <string name="ajuspriv">Ajustes de Privacidad</string>
    <string name="ap1">Recoleccion de información</string>
    <string name="ap2">Permitir recolección de datos para análisis </string>
    <string name="ap3">Funcionalidades de localización</string>
    <string name="ap4">Permitir el uso de localización para las funcionalidades de amimounstruos</string>
    <string name="desc_boton_amigos">Botón para ver amigos</string>
    <string name="preguntafrec1">¿Cómo cambio mi nombre de usuario o mi dirección de correo electrónico?</string>
    <string name="preguntafrec2">¿Cómo elimino o reinicio un curso?</string>
    <string name="preguntafrec3">¿Cómo puedo eliminar mi cuenta y mis datos de acceso?</string>
    <string name="algunaduda">¿Tienes alguna otra duda?</string>
    <string name="enviarsug">Enviar sugerencia</string>
    <string name="notinteligente">Notificación Inteligente</string>
    <string name="depractica">De práctica</string>
    <string name="horanoti">Hora de notificación</string>
    <string name="las5">5:00 p.m</string>
    <string name="ranchapeligro">Racha en Peligro</string>
    <string name="progresosemanal">Progreso Semanal</string>
    <string name="campmark">Campaña de Marketing</string>
    <string name="actprodu">Actualización de productos y tips para aprender</string>
    <string name="continuar">Continuar</string>
    <string name="mapa">Mapa</string>
    <string name="vamos">vamos</string>
    <string name="volverintentar">Volver a intentar</string>
    <string name="plantas1">Se merchitan y no crecen </string>
    <string name="plantas2">Empiezan a bailar </string>
    <string name="animales1">Se vuelven invisibles</string>
    <string name="animales2">se enferman </string>
    <string name="personas1">nos enfermamos</string>
    <string name="personas2">podemos vivir sin agua</string>
    <string name="anterior">Anterior</string>
    <string name="siguiente">Siguiente</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="derecha">A la derecha</string>
    <string name="jabon">Jabon</string>
    <string name="toalla">Toalla</string>
    <string name="ducha">Ducha</string>
    <string name="llave">llave de el lavamanos</string>
    <string name="tuberia">Tuberia</string>
    <string name="nivel1">Nivel 1</string>
    <string name="nivel2">Nivel 2</string>
    <string name="nivel3">Nivel 3</string>
    <string name="nivel4">Nivel 4</string>
    <string name="nivel5">Nivel 5</string>
    <string name="nivel6">Nivel 6</string>
    <string name="nivel7">Nivel 7</string>
    <string name="nivel8">Nivel 8</string>
    <string name="nivel9">Nivel 9</string>
  <string name="textfriends">Amigos</string>
    <string name="agregaamigos">¡Aún no tienes amigos! Toca el botón para añadir uno</string>
  <string name="buscaamigos">Escribe el nombre de tu amigo para agregarlo</string>

</resources>
