<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banerabk5"
    android:contentDescription="@string/jabon"
    tools:context=".Screens.Games.MedioAmbiente.Nivel4.Banera5Activity">

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline142"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.18" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline143"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.11" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline149"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.49" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline144"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.31" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline145"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.54" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline146"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.68" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline147"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.84" />

  <ImageView
    android:id="@+id/toallaButton"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="44dp"
    android:contentDescription="@string/toalla"
    app:layout_constraintHeight_percent="0.3"
    app:layout_constraintStart_toStartOf="@+id/guideline146"
    app:layout_constraintTop_toTopOf="@+id/guideline142"
    app:layout_constraintWidth_percent="0.2" />

  <ImageButton
    android:id="@+id/mapButton"
    android:layout_width="60dp"
    android:layout_height="50dp"
    android:background="@drawable/mapbutt"
    android:contentDescription="@string/mapa"
    app:layout_constraintHeight_percent="0.1"
    app:layout_constraintWidth_percent="0.06"
    tools:layout_editor_absoluteX="1121dp"
    tools:layout_editor_absoluteY="59dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
