<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:background="@drawable/novedadesbk"
    tools:context=".Screens.Configurations.CentroAyuda.Notificaciones.NovedadesActivity">

  <ImageView
    android:id="@+id/imageView6"
    android:layout_width="1373dp"
    android:layout_height="818dp"
    android:background="@drawable/opcidad"
    tools:layout_editor_absoluteX="-3dp"
    tools:layout_editor_absoluteY="0dp" />

  <ImageButton
    android:id="@+id/imageButton12"
    android:layout_width="56dp"
    android:layout_height="52dp"
    android:background="@drawable/notificacioncelular"
    app:layout_constraintHeight_percent="0.05"
    app:layout_constraintWidth_percent="0.03"
    tools:layout_editor_absoluteX="916dp"
    tools:layout_editor_absoluteY="337dp" />

  <ImageView
    android:id="@+id/imageView22"
    android:layout_width="743dp"
    android:layout_height="197dp"
    android:background="@drawable/rectangulowh"
    tools:layout_editor_absoluteX="314dp"
    tools:layout_editor_absoluteY="225dp" />

  <ImageView
    android:id="@+id/imageView26"
    android:layout_width="744dp"
    android:layout_height="8dp"
    android:background="@drawable/horizontalline"
    tools:layout_editor_absoluteX="310dp"
    tools:layout_editor_absoluteY="298dp" />

  <TextView
    android:id="@+id/textView13"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/novedades"
    android:textColor="@color/white"
    android:textSize="34sp"
    tools:layout_editor_absoluteX="577dp"
    tools:layout_editor_absoluteY="90dp" />

  <TextView
    android:id="@+id/textView19"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/campmark"
    android:textColor="@color/white"
    android:textSize="30sp"
    tools:layout_editor_absoluteX="332dp"
    tools:layout_editor_absoluteY="243dp" />

  <TextView
    android:id="@+id/textView20"
    android:layout_width="396dp"
    android:layout_height="86dp"
    android:text="@string/actprodu"
    android:textColor="@color/white"
    android:textSize="30sp"
    tools:layout_editor_absoluteX="332dp"
    tools:layout_editor_absoluteY="318dp" />

  <ImageButton
    android:id="@+id/returnButton"
    android:layout_width="88dp"
    android:layout_height="80dp"
    android:background="@drawable/returnbt"
    app:layout_constraintHeight_percent="0.08"
    app:layout_constraintWidth_percent="0.06"
    tools:layout_editor_absoluteX="1213dp"
    tools:layout_editor_absoluteY="641dp" />

  <ImageView
    android:id="@+id/imageView16"
    android:layout_width="322dp"
    android:layout_height="114dp"
    android:background="@drawable/menu"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.15"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintWidth_percent="0.25"
    tools:layout_editor_absoluteY="638dp" />

  <ImageButton
    android:id="@+id/perfilButton"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="48dp"
    android:background="@drawable/perfil"
    app:layout_constraintBottom_toBottomOf="@+id/salirButton"
    app:layout_constraintHeight_percent="0.09"
    app:layout_constraintStart_toEndOf="@+id/salirButton"
    app:layout_constraintTop_toTopOf="@+id/salirButton"
    app:layout_constraintVertical_bias="0.0"
    app:layout_constraintWidth_percent="0.05" />

  <ImageButton
    android:id="@+id/salirButton"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@drawable/ajustes"
    app:layout_constraintHeight_percent="0.09"
    app:layout_constraintWidth_percent="0.05"
    tools:layout_editor_absoluteX="593dp"
    tools:layout_editor_absoluteY="652dp" />

  <ImageButton
    android:id="@+id/imageButton11"
    android:layout_width="56dp"
    android:layout_height="52dp"
    android:background="@drawable/notificacioncorreo"
    app:layout_constraintHeight_percent="0.05"
    app:layout_constraintWidth_percent="0.03"
    tools:layout_editor_absoluteX="988dp"
    tools:layout_editor_absoluteY="243dp" />

  <ImageButton
    android:id="@+id/imageButton13"
    android:layout_width="56dp"
    android:layout_height="52dp"
    android:background="@drawable/notificacioncorreo"
    app:layout_constraintHeight_percent="0.05"
    app:layout_constraintWidth_percent="0.03"
    tools:layout_editor_absoluteX="988dp"
    tools:layout_editor_absoluteY="337dp" />

  <ImageButton
    android:id="@+id/imageButton"
    android:layout_width="56dp"
    android:layout_height="52dp"
    android:background="@drawable/notificacioncelular"
    app:layout_constraintHeight_percent="0.05"
    app:layout_constraintWidth_percent="0.03"
    tools:layout_editor_absoluteX="916dp"
    tools:layout_editor_absoluteY="243dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
