<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/preguntasfrebk"
    tools:context=".Screens.Configurations.CentroAyuda.PreguntasFrecuentesActivity">

  <ImageView
      android:id="@+id/imageView6"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/opcidad"
      app:layout_constraintHeight_percent="1"
      app:layout_constraintWidth_percent="1"
      tools:layout_editor_absoluteX="0dp"
      tools:layout_editor_absoluteY="0dp" />

  <ImageButton
      android:id="@+id/imageButton4"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/flechawh"
      android:rotation="90"
      app:layout_constraintBottom_toTopOf="@+id/guideline230"
      app:layout_constraintHeight_percent="0.05"
      app:layout_constraintStart_toStartOf="@+id/guideline225"
      app:layout_constraintWidth_percent="0.03" />

  <TextView
      android:id="@+id/textView27"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/enviarsug"
      android:textColor="#593871"
      android:textSize="34sp"
      app:layout_constraintBottom_toBottomOf="@+id/textView25"
      app:layout_constraintTop_toTopOf="@+id/textView25"
      app:layout_constraintVertical_bias="0.0"
      tools:layout_editor_absoluteX="1018dp" />

  <ImageView
      android:id="@+id/imageView24"
      android:layout_width="1148dp"
      android:layout_height="152dp"
      android:background="@drawable/rectangulowh"
      app:layout_constraintBottom_toTopOf="@+id/guideline231"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0.14"
      app:layout_constraintHorizontal_bias="0.522"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintWidth_percent="0.6" />

  <TextView
      android:id="@+id/textView19"
      android:layout_width="915dp"
      android:layout_height="129dp"
      android:text="@string/preguntafrec3"
      android:textColor="@color/white"
      android:textSize="43sp"
      app:layout_constraintBottom_toTopOf="@+id/guideline231"
      app:layout_constraintStart_toStartOf="@+id/guideline236" />

  <ImageView
      android:id="@+id/imageView23"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/rectangulowh"
      app:layout_constraintBottom_toTopOf="@+id/guideline232"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0.12"
      app:layout_constraintHorizontal_bias="0.524"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintWidth_percent="0.6" />

  <ImageButton
      android:id="@+id/imageButton"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/flechawh"
      android:rotation="90"
      app:layout_constraintBottom_toTopOf="@+id/guideline229"
      app:layout_constraintHeight_percent="0.05"
      app:layout_constraintStart_toStartOf="@+id/guideline225"
      app:layout_constraintWidth_percent="0.03" />

  <TextView
      android:id="@+id/textView24"
      android:layout_width="781dp"
      android:layout_height="60dp"
      android:text="@string/preguntafrec2"
      android:textColor="@color/white"
      android:textSize="42sp"
      app:layout_constraintBottom_toTopOf="@+id/guideline229"
      app:layout_constraintStart_toStartOf="@+id/guideline236" />

  <TextView
      android:id="@+id/textView18"
      android:layout_width="369dp"
      android:layout_height="88dp"
      android:text="@string/centroayuda"
      android:textColor="@color/white"
      android:textSize="50sp"
      app:layout_constraintBottom_toTopOf="@+id/guideline222"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <ImageView
      android:id="@+id/imageView22"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/rectangulowh"
      app:layout_constraintBottom_toTopOf="@+id/guideline234"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0.2"
      app:layout_constraintHorizontal_bias="0.524"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintWidth_percent="0.6" />

  <TextView
      android:id="@+id/textView20"
      android:layout_width="699dp"
      android:layout_height="158dp"
      android:text="@string/preguntafrec1"
      android:textColor="@color/white"
      android:textSize="43sp"
      app:layout_constraintBottom_toTopOf="@+id/guideline235"
      app:layout_constraintStart_toStartOf="@+id/guideline236" />

  <ImageView
      android:id="@+id/imageView16"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/menu"
      app:layout_constraintBottom_toTopOf="@+id/guideline219"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0.13"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintWidth_percent="0.26" />

  <ImageButton
      android:id="@+id/perfilButton"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="96dp"
      android:background="@drawable/perfil"
      app:layout_constraintBottom_toBottomOf="@+id/salirButton"
      app:layout_constraintHeight_percent="0.09"
      app:layout_constraintStart_toEndOf="@+id/salirButton"
      app:layout_constraintTop_toTopOf="@+id/salirButton"
      app:layout_constraintVertical_bias="1.0"
      app:layout_constraintWidth_percent="0.06" />

  <ImageButton
      android:id="@+id/salirButton"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/ajustes"
      app:layout_constraintBottom_toTopOf="@+id/guideline220"
      app:layout_constraintHeight_percent="0.09"
      app:layout_constraintWidth_percent="0.06"
      tools:layout_editor_absoluteX="799dp" />


  <TextView
      android:id="@+id/textView25"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/algunaduda"
      android:textColor="@color/white"
      android:textSize="34sp"
      app:layout_constraintBottom_toTopOf="@+id/guideline223"
      app:layout_constraintStart_toStartOf="@+id/guideline224" />

  <ImageButton
      android:id="@+id/returnButton"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/returnbt"
      app:layout_constraintHeight_percent="0.1"
      app:layout_constraintStart_toStartOf="@+id/guideline221"
      app:layout_constraintWidth_percent="0.06"
      tools:layout_editor_absoluteY="929dp" />

  <ImageButton
      android:id="@+id/recordatoriosButton"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/flechawh"
      android:rotation="90"
      app:layout_constraintBottom_toTopOf="@+id/guideline228"
      app:layout_constraintHeight_percent="0.05"
      app:layout_constraintStart_toStartOf="@+id/guideline225"
      app:layout_constraintWidth_percent="0.03" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline219"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.98" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline220"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.95" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline223"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.82" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline222"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.18" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline221"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.92" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline224"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.31" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline225"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.74" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline226"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.74" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline236"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.23" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline228"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.37" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline229"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.54" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline230"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.7" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline231"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.74" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline232"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.58" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline233"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.54" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline234"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.44" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline235"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp"
      app:layout_constraintGuide_percent="0.415" />
</androidx.constraintlayout.widget.ConstraintLayout>
